# ai-enablement-orbit

./: .env.example  AGENTS.md  Makefile  OpenSpecExperience.md  README.md  pyproject.toml
.github/chatmodes/: agents-file-generator.chatmode.md
.github/prompts/: openspec-apply.prompt.md
openspec/: project.md
openspec/changes/add-cli-boilerplate/: proposal.md  tasks.md
openspec/changes/add-container-management-commands/: proposal.md  tasks.md
openspec/changes/add-dependency-injection-framework/: proposal.md  tasks.md
openspec/changes/add-integration-tests-against-emulator/: proposal.md  tasks.md
openspec/changes/add-item-management-commands/: proposal.md  tasks.md
openspec/changes/add-query-command-with-pagination/: proposal.md  tasks.md
openspec/changes/enhance-output-formatting/: proposal.md  tasks.md
openspec/changes/implement-connection-string-auth/: proposal.md  tasks.md
openspec/changes/implement-cosmos-repository-containers/: proposal.md  tasks.md
orbit/: __init__.py  __main__.py  cli.py  config.py  confirmation.py  emulator.py  exceptions.py  factory.py  output.py
orbit/auth/: strategy.py
orbit/commands/: __init__.py  containers.py  items.py
orbit/models/: base.py  item.py
orbit/repositories/: base.py  cosmos.py
tests/: test_auth_strategy.py  test_cli_flags.py  test_config.py  test_containers_commands.py  test_factory.py  test_item_repository.py  test_items_commands.py  test_repositories.py
tests/integration/: README.md  __init__.py  test_containers_e2e.py  test_containers_manual.py  test_cosmos_repository.py
(+13 files in other folders)
