[project]
name = "orbit"
version = "0.0.1"
description = "Orbit CLI for Azure Cosmos DB (boilerplate)"
authors = [ { name = "Colby Timm" } ]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "typer>=0.9,<1.0",
    "rich>=13.0,<14.0",
    "pydantic>=2.0,<3.0",
    # deferred until concrete implementation: "azure-cosmos>=4.5,<5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<6.0",
    "ruff>=0.6.0,<0.7.0",
]

[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["orbit"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["D"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
